Fixed overflown column headers causing unnecessary scrollbar being displayed.

--- a/src/styles/screenComponents.scss
+++ b/src/styles/screenComponents.scss
@@ -602,7 +602,7 @@ body {
   }
 }
 
-.oui-main-tab-handle:hover {
+.oui-main-tab-handle:not(.active):hover {
   background-color: $tab-handle-hover-bgcolor;
 }
 
